feat: Add Runtime logger closes #64